--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="splash-content">
         <img src="LOGO.jpg" alt="صورة أسطورية" class="splash-profile">
         <h1 class="splash-title"> 
-            <span>شخصات مهمة VIP</span>
+            <span>شخصيات مهمة VIP</span>
         </h1>
         <button class="splash-btn" onclick="enterSite()">  ابدا </button>
     </div>
@@ -76,7 +76,7 @@
                                 ستارلينك </p>
                             <div class="vip-status">
                                 <i class="fas fa-crown"></i>
-                                <span>شخصات مهمة VIP</span>
+                                <span>شخصياتمهمة VIP</span>
                             </div>
                         </div>
                     </div>
@@ -193,21 +193,7 @@
 
                 </div>
 
-                <div class="info-card">
-                    <div class="card-header">
-                        <i class="fas fa-clock"></i>
-                        <h3>ساعات العمل</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="working-hours">
-                            <div class="time-slot">
-                                <span class="days"> دوام كامل </span>
-                                <span class="time"> مفتوح دوماً </span>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </main>
 
@@ -227,6 +213,14 @@
                         <span>تيقو</span>
                     </button>
                 </a>
+                <div class="listening-indicator">
+    <i class="fas fa-microphone"></i>
+    <div class="sound-waves">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</div>
                 <a href="https://wa.me/23566571490">
                     <!-- زر WhatsApp (بارز) -->
                     <button class="nav-btn primary-btn whatsapp-btn">
@@ -250,11 +244,87 @@
                     </button>
                 </a>
 
-                <!-- زر QR Code -->
-                <button class="nav-btn secondary-btn qr-btn">
-                    <i class="fas fa-qrcode"></i>
-                    <span>QR</span>
-                </button>
+             <!-- أيقونة الاستماع الصوتي ضمن Navbar -->
+
+<style>
+  /* زر الاستماع الذهبي ضمن Navbar */
+.listening-indicator {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    height: 70px;
+    background: linear-gradient(145deg, #d4af37, #b8860b); /* ذهبية فاخرة */
+    border-radius: 50%;
+    cursor: default;
+    box-shadow: 0 0 15px rgba(212, 175, 55, 0.7), 0 8px 20px rgba(0,0,0,0.3);
+    overflow: visible;
+    transition: all 0.4s ease;
+    z-index: 1000;
+}
+
+/* أيقونة المايك كبيرة وبارزة */
+.listening-indicator i {
+    color: #fff;
+    font-size: 28px;
+    z-index: 2;
+    transition: transform 0.4s ease;
+}
+
+/* الموجات الصوتية */
+.sound-waves {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 6px;
+    z-index: 1;
+}
+
+/* شكل الموجة */
+.sound-waves span {
+    display: block;
+    width: 6px;
+    height: 14px;
+    background: rgba(255, 215, 0, 0.7); /* ذهبي فاتح */
+    border-radius: 3px;
+    animation: wave 1s infinite ease-in-out;
+}
+
+/* اختلاف التوقيت لكل موجة */
+.sound-waves span:nth-child(1) { animation-delay: 0s; }
+.sound-waves span:nth-child(2) { animation-delay: 0.2s; }
+.sound-waves span:nth-child(3) { animation-delay: 0.4s; }
+
+/* نبض الموجة */
+@keyframes wave {
+    0%, 100% { transform: scaleY(0.5); opacity: 0.7; }
+    50% { transform: scaleY(1.8); opacity: 1; }
+}
+
+/* تأثير الدوران البطيء للموجات حول الزر */
+.listening-indicator.active .sound-waves {
+    animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
+/* تأثير Hover أسطوري */
+.listening-indicator:hover {
+    transform: translateY(-5px) scale(1.2);
+    box-shadow: 0 0 25px rgba(215, 144, 1, 0.9), 0 12px 30px rgba(0,0,0,0.4);
+}
+
+.listening-indicator:hover i {
+    transform: scale(1.3);
+}
+
+</style>
             </div>
         </nav>
 
@@ -264,6 +334,9 @@
     <i class="fas fa-camera"></i>
     <span>التقط وحفظ</span>
 </button>
+<!-- زر الاستماع الصوتي -->
+ 
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
 
@@ -286,5 +359,6 @@
 
         <!-- JavaScript -->
         <script src="script.js"></script>
+        <script src="voice.js"></script>
     </body>
 </html>
